--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="/Users/ranz/Downloads/twitter4j-4.0.2/lib/twitter4j-core-4.0.2.jar"/>
-	<classpathentry kind="lib" path="/Users/ranz/Downloads/apache-tomcat-8.0.17/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="F:/eBiz Tasks/Task 8/twitter4j-core-4.0.2.jar"/>
+	<classpathentry kind="lib" path="E:/Apache Tomcat8.0/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
